hard-gists/4121343/run.log
=== Docker Run Log for 4121343 ===
Started at: Mi 29. Okt 14:22:14 CET 2025

[2025-10-29 14:22:14] START: Running container for 4121343
[2025-10-29 14:22:14] SUCCESS: Container 454e55eca0d602c22bce9862d521deb558159bc4a94794adcd497099556c304e started for 4121343
=== Container logs for 4121343 ===
  File "/snippet.py", line 28
    print event.msg_type
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4121343 ===
[2025-10-29 14:22:17] INFO: Container 454e55eca0d602c22bce9862d521deb558159bc4a94794adcd497099556c304e has stopped
